--- a/index.html
+++ b/index.html
@@ -109,8 +109,16 @@
                   ></textarea>
                 </label>
                 <label class="checkbox-label">
-                  <input type="checkbox" class="input-checkbox" />I accept the
-                  terms and conditions of the <a href=""> Privacy Policy</a>
+                  <input
+                    type="checkbox"
+                    value="rivacy Policy"
+                    class="input-checkbox"
+                  />
+                  <span class="checkbox-icon"></span> I accept the terms and
+                  conditions of the
+                  <a href="" class="checkbox-link">
+                    <span>Privacy Policy</span>
+                  </a>
                 </label>
                 <button type="submit" class="btn-submit">Send</button>
               </form>
