--- a/index.html
+++ b/index.html
@@ -115,10 +115,8 @@
                     class="input-checkbox"
                   />
                   <span class="checkbox-icon"></span> I accept the terms and
-                  conditions of the
-                  <a href="" class="checkbox-link">
-                    <span>Privacy Policy</span>
-                  </a>
+                  conditions of the&nbsp;
+                  <a href="" class="checkbox-link"> Privacy Policy </a>
                 </label>
                 <button type="submit" class="btn-submit">Send</button>
               </form>
@@ -491,6 +489,25 @@
                 </a>
               </li>
             </ul>
+          </div>
+          <div class="subscription">
+            <p class="subscript-title">Subscribe</p>
+            <form class="subscript-form">
+              <input
+                type="email"
+                name="email"
+                placeholder="E-mail"
+                class="subscript-input"
+              />
+              <button type="submit" class="btn-subscript">
+                Subscribe
+                <span class="subs-icon">
+                  <svg class="icon-frame" width="24" height="24">
+                    <use href="./images/symbol-defs.svg#icon-Frame-3-1"></use>
+                  </svg>
+                </span>
+              </button>
+            </form>
           </div>
         </div>
       </div>
