--- a/portfolio.html
+++ b/portfolio.html
@@ -343,6 +343,25 @@
               </li>
             </ul>
           </div>
+          <div class="subscription">
+            <p class="subscript-title">Subscribe</p>
+            <form class="subscript-form">
+              <input
+                type="email"
+                name="email"
+                placeholder="E-mail"
+                class="subscript-input"
+              />
+              <button type="submit" class="btn-subscript">
+                Subscribe
+                <span class="subs-icon">
+                  <svg class="icon-frame" width="24" height="24">
+                    <use href="./images/symbol-defs.svg#icon-Frame-3-1"></use>
+                  </svg>
+                </span>
+              </button>
+            </form>
+          </div>
         </div>
       </div>
     </footer>
