--- a/index.html
+++ b/index.html
@@ -73,30 +73,36 @@
               <form class="form">
                 <label class="form-label">
                   <span class="sp-label">Name</span>
-                  <svg class="icon-label" width="18" height="18">
-                    <use
-                      href="./images/symbol-defs.svg#icon-person-black-18dp-1-1"
-                    ></use>
-                  </svg>
-                  <input type="text" name="name" class="input" />
+                  <span class="container-input">
+                    <svg class="icon-label" width="18" height="18">
+                      <use
+                        href="./images/symbol-defs.svg#icon-person-black-18dp-1-1"
+                      ></use>
+                    </svg>
+                    <input type="text" name="name" class="input"
+                  /></span>
                 </label>
                 <label class="form-label">
                   <span class="sp-label">Phone</span>
-                  <svg class="icon-label" width="18" height="18">
-                    <use
-                      href="./images/symbol-defs.svg#icon-phone-black-18dp-1-1"
-                    ></use>
-                  </svg>
-                  <input type="tel" name="phone" class="input" />
+                  <span class="container-input">
+                    <svg class="icon-label" width="18" height="24">
+                      <use
+                        href="./images/symbol-defs.svg#icon-phone-black-18dp-1-1"
+                      ></use>
+                    </svg>
+                    <input type="tel" name="phone" class="input"
+                  /></span>
                 </label>
                 <label class="form-label">
                   <span class="sp-label">Email</span>
-                  <svg class="icon-label" width="18" height="18">
-                    <use
-                      href="./images/symbol-defs.svg#icon-email-black-18dp-1-1"
-                    ></use>
-                  </svg>
-                  <input type="email" name="email" class="input" />
+                  <span class="container-input">
+                    <svg class="icon-label" width="18" height="24">
+                      <use
+                        href="./images/symbol-defs.svg#icon-email-black-18dp-1-1"
+                      ></use>
+                    </svg>
+                    <input type="email" name="email" class="input"
+                  /></span>
                 </label>
                 <label class="form-label">
                   <span class="sp-label">Coments</span>
